--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="manifest" href="/manifest.json"/>
+    <!-- Standard iPhone -->
+<link rel="apple-touch-icon" sizes="57x57" href="imgs/icon-114x114.png" />
+<!-- Retina iPhone -->
+<link rel="apple-touch-icon" sizes="114x114" href="touch-icon-iphone-114.png" />
+<!-- Standard iPad -->
+<link rel="apple-touch-icon" sizes="72x72" href="touch-icon-ipad-144.png" />
+<!-- Retina iPad -->
+<link rel="apple-touch-icon" sizes="144x144" href="touch-icon-ipad-144.png" />
 </head>
 <body>
     <div>
