--- a/index.html
+++ b/index.html
@@ -1,22 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="manifest" href="/manifest.json"/>
+    <link rel="manifest" href="/manifest.json" />
     <!-- Standard iPhone -->
-<link rel="apple-touch-icon" sizes="57x57" href="imgs/icon-114x114.png" />
-<!-- Retina iPhone -->
-<link rel="apple-touch-icon" sizes="114x114" href="touch-icon-iphone-114.png" />
-<!-- Standard iPad -->
-<link rel="apple-touch-icon" sizes="72x72" href="touch-icon-ipad-144.png" />
-<!-- Retina iPad -->
-<link rel="apple-touch-icon" sizes="144x144" href="touch-icon-ipad-144.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="imgs/icon-114x114.png" />
+    <!-- Retina iPhone -->
+    <link rel="apple-touch-icon" sizes="114x114" href="touch-icon-iphone-114.png" />
+    <!-- Standard iPad -->
+    <link rel="apple-touch-icon" sizes="72x72" href="touch-icon-ipad-144.png" />
+    <!-- Retina iPad -->
+    <link rel="apple-touch-icon" sizes="144x144" href="touch-icon-ipad-144.png" />
 </head>
+
 <body>
     <div>
-        JD首页
+        JD首页<a href="/6-1.html">进入6-1</a>
     </div>
+    <script>
+        /* 判断当前浏览器是否支持serviceWorker */
+        if ('serviceWorker' in navigator) {
+            /* 当页面加载完成就创建一个serviceWorker */
+            window.addEventListener('load', function () {
+                /* 创建并指定对应的执行内容 */
+                /* scope 参数是可选的，可以用来指定你想让 service worker 控制的内容的子目录。 在这个例子里，我们指定了 '/'，表示 根网域下的所有内容。这也是默认值。 */
+                navigator.serviceWorker.register('./serviceWorker.js', { scope: './' })
+                    .then(function (registration) {
+
+                        console.log('ServiceWorker registration successful with scope: ', registration.scope);
+                    })
+                    .catch(function (err) {
+
+                        console.log('ServiceWorker registration failed: ', err);
+                    });
+            });
+        }
+    </script>
 </body>
+
 </html>
