--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 
 <body>
     <div>
-        JD首页<a href="/6-1.html">进入6-1</a>
+        JD首页<a href="/6-1.html">进入6-0111110212212</a>
     </div>
+    <script src="js/vconsole.min.js"></script>
     <script>
         /* 判断当前浏览器是否支持serviceWorker */
         if ('serviceWorker' in navigator) {
@@ -38,6 +39,10 @@
                     });
             });
         }
+
+        // 初始化
+    var vConsole = new VConsole();
+    console.log('Hello world');
     </script>
 </body>
 
