--- a/6-1.html
+++ b/6-1.html
@@ -73,7 +73,7 @@
            page = 1;
            $("#listdata").html('');
            $.ajax({
-                url: "data/listData.json",
+                url: "./data/listData.json",
                 method: "get",
                 data: {
                     page: page,
@@ -107,7 +107,7 @@
             // }
 
             $.ajax({
-                url: "data/listData.json",
+                url: "./data/listData.json",
                 method: "get",
                 data: {
                     page: page,
