--- a/5-6.html
+++ b/5-6.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/animate.min.css">
     <style>
         .swiper-container {
-            width: 600px;
+            width: 4rem;
             height: 300px;
         }
         .ani {
@@ -38,8 +38,8 @@
         <div class="swiper-pagination"></div>
 
         <!-- 如果需要导航按钮 -->
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
+        <!-- <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div> -->
 
         <!-- 如果需要滚动条 -->
         <div class="swiper-scrollbar"></div>
@@ -72,15 +72,15 @@
             },
 
             // 如果需要前进后退按钮
-            navigation: {
-                nextEl: '.swiper-button-next',
-                prevEl: '.swiper-button-prev',
-            },
+            // navigation: {
+            //     nextEl: '.swiper-button-next',
+            //     prevEl: '.swiper-button-prev',
+            // },
 
             // 如果需要滚动条
-            scrollbar: {
-                el: '.swiper-scrollbar',
-            },
+            // scrollbar: {
+            //     el: '.swiper-scrollbar',
+            // },
         })   
     </script>
 </body>
