--- a/index.html
+++ b/index.html
@@ -283,8 +283,7 @@
 
             <div class="block2-list-item">
                 <div class="block2-list-item-img">
-                    <img
-                        src="https://s4.aconvert.com/convert/p3r68-cdx67/amgr5-rugzs.png />
+                    <img src="https://s4.aconvert.com/convert/p3r68-cdx67/amgr5-rugzs.png" />
                 </div>
                 <div class="block2-list-item-price">
                     ¥999
@@ -405,8 +404,7 @@
     <div class="block4">
         <div class="block4-item">
             <div class="block4-item-hd">
-                <img
-                    src="https://s4.aconvert.com/convert/p3r68-cdx67/ak91i-bmtqw.png />
+                <img src="https://s4.aconvert.com/convert/p3r68-cdx67/ak91i-bmtqw.png" />
             </div>
             <div class="block4-item-bd">
                 <h3><span>京东超市</span>MG macy gray奢侈品腰带鳄鱼皮皮带男商务不锈钢捷豹板扣非愛马仕男士皮带M-lv71款 金扣棕带 115CM</h3>
