--- a/startpage.html
+++ b/startpage.html
@@ -25,9 +25,9 @@
         <img class="startPage-logo" src="imgs/JDtunch.png" />
     </div>
     <script>
-        // setTimeout(()=> {
-        //     window.location.href= "/index.html";
-        // }, 3000)
+        setTimeout(()=> {
+            window.location.href= "/index.html";
+        }, 3000)
     </script>
 </body>
 </html>
